fixed text formatting for header section on smaller screens

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -60,6 +60,15 @@
   html {
     font-size: 80%;
   }
+  .header-text {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .title {
+    margin-top: 4rem;
+  }
+
   .about-col-1 {
     display: none;
   }
@@ -94,11 +103,6 @@
   .last-service {
     grid-column: span 2;
     justify-self: center;
-  }
-
-  .title {
-    margin-top: 2rem;
-    display: block;
   }
 
   .img-box {
@@ -238,6 +242,10 @@
 }
 
 @media only screen and (max-width: 550px) {
+  .primary-heading {
+    text-align: center;
+  }
+
   .description-container {
     width: 23rem;
     justify-self: center;
